# aoc2020

./: Cargo.toml  README.md
d01/: Cargo.toml  README.md
d01/benches/: main.rs
d01/src/: lib.rs  main.rs
d02/: Cargo.toml
d02/benches/: main.rs
d02/src/: lib.rs  main.rs
d03/: Cargo.toml
d03/benches/: main.rs
d03/src/: lib.rs  main.rs
d04/: Cargo.toml  input.txt  valid_passports.txt
d04/benches/: main.rs
d04/src/: lib.rs  main.rs  passports.rs
d05/: Cargo.toml
d05/benches/: main.rs
d05/src/: flight_pass.rs  lib.rs  main.rs
d06/: Cargo.toml
d06/benches/: main.rs
d06/src/: declaration.rs  lib.rs  main.rs
d07/: Cargo.toml
d07/benches/: main.rs
d07/src/: lib.rs  main.rs
d08/: Cargo.toml
d08/benches/: main.rs
d08/src/: lib.rs  main.rs  model.rs
d09/: Cargo.toml
d09/benches/: main.rs
d09/src/: lib.rs  main.rs
d10/: Cargo.toml
d10/benches/: main.rs
d10/src/: lib.rs  main.rs
d11/: Cargo.toml
d11/benches/: main.rs
d11/src/: lib.rs  main.rs
d12/: Cargo.toml
d12/benches/: main.rs
d12/src/: lib.rs  main.rs
d13/: Cargo.toml
d13/benches/: main.rs
d13/src/: lib.rs  main.rs
d14/: Cargo.toml
d14/benches/: main.rs
d14/src/: lib.rs  main.rs
d15/: Cargo.toml
d15/benches/: main.rs
d15/src/: lib.rs  main.rs
d16/: Cargo.toml
d16/benches/: main.rs
d16/src/: lib.rs  main.rs
d17/: Cargo.toml  description.md
d17/benches/: main.rs
d18/: Cargo.toml
d19/: Cargo.toml
d21/: Cargo.toml
d22/: Cargo.toml
d23/: Cargo.toml
d24/: Cargo.toml
d24/benches/: main.rs
d24/src/: lib.rs  main.rs
(+18 files in other folders)
