[package]
name = "d08"
version = "0.1.0"
authors = ["Kristjan Siimson <k.siimson@sportradar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
harness = false
