[package]
name = "d24"
version = "0.1.0"
authors = ["Kristjan Siimson <k.siimson@sportradar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
harness = false
